User request: You are Fena...

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,9 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="A product of Fenado" />
-        <title>Fenado | Fullstack App</title>
+        <meta name="theme-color" content="#0F172A" />
+        <meta name="color-scheme" content="dark" />
+        <meta name="description" content="PulseMarketing - Full-service marketing agency specializing in social media, outbound campaigns, and comprehensive marketing solutions that drive real results." />
+        <meta name="keywords" content="marketing agency, social media marketing, outbound marketing, inbound marketing, digital marketing, lead generation" />
+        <title>PulseMarketing | Transform Your Brand Into A Market Leader</title>
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+
         <script>
             window.onerror = (msg, src, line, col, err) => { console.warn('Error:', msg); return true; };
             window.addEventListener('unhandledrejection', e => { console.warn('Promise:', e.reason); e.preventDefault(); });
